fix(quest): restore missing movie transitions